Implement adapters for 1.8, 1.16.4, 1.17, 1.18, 1.19.4, 1.20.1